# RADV-layer-fir-xclipse-940-gpu

./: Android.mk  CMakeLists.txt  README_wrapper.txt  build.sh  manifest.json
.github/workflows/: build.yml
include/: bc_decoder_dispatch.h  bc_shader_loader.h  radv_lite_autotune.h  radv_lite_hud.h  radv_lite_logger.h  radv_lite_profiles.h  radv_lite_spirvpatch.h  shader_fallback.h  spv_patch.h  xeno_wrapper.h
include/include/: xeno_wrapper.h
layers/: xclipse_autotune.json  xclipse_debughud.json
logs/: eden_input_log.schema
profiles/: autotune_rules.json  autotune_state.json  xclipse_940_profile.json
shaders/: bc_decode.comp  bc_fallback_decode.glsl  hud_draw.frag  mesh_emulation.comp
src/: bc_decoder_dispatch.c  bc_shader_loader.c  profile_loader.c  radv_lite_autotune.c  radv_lite_barriers.c  radv_lite_fallbacks.c  radv_lite_hud.c  radv_lite_logger.c  radv_lite_memory.c  radv_lite_pipelines.c  radv_lite_profiles.c  radv_lite_rt_fallback.c  radv_lite_rt_hw.c  radv_lite_spirvpatch.c  radv_lite_swapchain.c  shader_fallback_manager.c  spv_patch.c  vk_getproc_shim.c  vk_overrides_device.c  vk_overrides_instance.c  xeno_init.c  xeno_wrapper.h
usr/share/vulkan/icd.d/: xeno_wrapper.json
